# version-bump

./: .gitignore  Makefile  README.md  install.sh  pyproject.toml
.agentbox/: .gitignore  LOG.md  agents.md  install-manifest.json  mcp-meta.json  superagents.md
.agentbox/claude/: .credentials.json  config-super.json  config.json  history.jsonl  mcp.json
.agentbox/claude/debug/: 78040dd7-8b38-4d1b-92a0-9754fe359545.txt  f1cef687-caaa-42d8-bd4a-8c3f821c5913.txt  latest
.agentbox/claude/plans/: toasty-finding-hare.md
.agentbox/claude/statsig/: statsig.cached.evaluations.d86ca57172  statsig.cached.evaluations.e31ea3650e  statsig.failed_logs.658916400  statsig.last_modified_time.evaluations  statsig.session_id.2656274335  statsig.stable_id.2656274335
.agentbox/codex/: auth.json  config.toml
.agentbox/codex/skills/westworld/: SKILL.md
.agentbox/mcp/agentbox-analyst/: config.json  server.py
.agentbox/mcp/agentbox-notify/: README.md  config.json  server.py
.agentbox/mcp/agentctl/: README.md  config.json  server_fastmcp.py  server_manual_backup.py
.agentbox/mcp/brave-search/: config.json
.agentbox/mcp/claude-mcp/: README.md  config.json  server.py
.agentbox/mcp/codex-mcp/: README.md  config.json  server.py
.agentbox/mcp/fetch/: README.md  config.json
.agentbox/mcp/fritzbox/: config.json
.agentbox/mcp/gemini-mcp/: README.md  config.json  server.py
.agentbox/mcp/git/: README.md  config.json
.agentbox/mcp/github/: README.md  config.json
.agentbox/mcp/google-maps/: README.md  config.json
.agentbox/mcp/gwdg-mcp/: .env.example  .gitignore  README.md  claude_desktop_config.example.json  config.json  pyproject.toml
.agentbox/mcp/gwdg-mcp/src/saia_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
.agentbox/mcp/gwdg-mcp/tests/: __init__.py  test_client.py
.agentbox/mcp/homeassistant/: README.md  config.json
.agentbox/mcp/litellm/: config.json  server.py
.agentbox/mcp/mysql/: config.json
.agentbox/mcp/playwright/: config.json
.agentbox/mcp/postgres/: README.md  config.json
.agentbox/mcp/redis/: config.json
.agentbox/mcp/slack/: README.md  config.json
.agentbox/mcp/sqlite/: README.md  config.json
.agentbox/mcp/ssh/: README.md  config.json
tests/: __init__.py  conftest.py  test_git.py
tests/fixtures/: Cargo.toml  Chart.yaml  _version.py  build.gradle  mix.exs  pubspec.yaml  setup.cfg
version_bump/: __init__.py  cli.py  main.py
version_bump/handlers/: cargo.py  composer.py  package_json.py  setup_cfg.py  setup_py.py  version_file.py
(+55 files in other folders)
