[metadata]
name = my-python-project
version = 1.2.3
description = A sample Python project
author = Test Author
author_email = test@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28.0
    click>=8.0.0

[options.extras_require]
dev =
    pytest
    black
    mypy

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist
